--- a/Piano_using_media/index.html
+++ b/Piano_using_media/index.html
@@ -5,7 +5,7 @@
     <title>Piano</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css">
-  </head>~
+  </head>
   <body>
     <div id="piano">
       <img class="logo" src="https://cdn.freecodecamp.org/platform/universal/fcc_primary.svg" alt="freeCodeCamp Logo" />
