--- a/Animation/Transition(penguin)/index.html
+++ b/Animation/Transition(penguin)/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Penguin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
@@ -32,6 +32,8 @@
         <p>I CSS</p>
       </div> 
       <div class="penguin-body">
+        <div class="arm left"></div>
+        <div class="arm right"></div>
         <div class="foot left"></div>
         <div class="foot right"></div>
       </div>
