--- a/Technical-documentation/index.html
+++ b/Technical-documentation/index.html
@@ -15,17 +15,24 @@
             <p class="index"><a href="">Javascript and Java</a></p>
             <p class="index"><a href="">Hellow world</a></p>
             <p class="index"><a href="">Variables</a></p>
-            <p class="index"><a href=""></a></p>
-            <p class="index"><a href="">Indroduction</a></p>
-            <p class="index"><a href="">Indroduction</a></p>
-            <p class="index"><a href="">Indroduction</a></p>
-            <p class="index"><a href="">Indroduction</a></p>
-            <p class="index"><a href="">Indroduction</a></p>
-            <p class="index"><a href="">Indroduction</a></p>
-            <p class="index"><a href="">Indroduction</a></p>
-            <p class="index"><a href="">Indroduction</a></p>
+            <p class="index"><a href="">Delclaring Variables</a></p>
+            <p class="index"><a href="">Variables Scope</a></p>
+            <p class="index"><a href="">Globle Variables</a></p>
+            <p class="index"><a href="">Constasnt</a></p>
+            <p class="index"><a href="">Data types</a></p>
+            <p class="index"><a href="">if...else statement</a></p>
+            <p class="index"><a href="">Function Declaration</a></p>
+            <p class="index"><a href="">Reference</a></p>
+            <p class="index"><a href="">While statement</a></p>
         </section>
-        <section class="right"></section>
+        <section class="right">
+            <section class="main-section">
+                <h1>Javascript and Java</h1>
+                <p class="para">JavaScript and Java are similar in some ways but fundamentally different in some others. The JavaScript language resembles Java but does not have Java's static typing and strong type checking. JavaScript follows most Java expression syntax, naming conventions and basic control-flow constructs which was the reason why it was renamed from LiveScript to JavaScript.</p>
+                <p>In contrast to Java's compile-time system of classes built by declarations, JavaScript supports a runtime system based on a small number of data types representing numeric, Boolean, and string values. JavaScript has a prototype-based object model instead of the more common class-based object model. The prototype-based model provides dynamic inheritance; that is, what is inherited can vary for individual objects. JavaScript also supports functions without any special declarative requirements. Functions can be properties of objects, executing as loosely typed methods.</p>
+                <p>JavaScript is a very free-form language compared to Java. You do not have to declare all variables, classes, and methods. You do not have to be concerned with whether methods are public, private, or protected, and you do not have to implement interfaces. Variables, parameters, and function return types are not explicitly typed.</p>
+            </section>
+        </section>
     </main>
 </body>
 </html>
