--- a/Technical-documentation/index.html
+++ b/Technical-documentation/index.html
@@ -1,4 +1,3 @@
-<!-- deadline 17/08/2024 3:00 -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,25 +9,27 @@
   <body>
     <main id="main-doc">
       <section class="left">
-        <h1>JS Documentation</h1>
-        <p class="index"><a href="#Introduction">Indroduction</a></p>
-        <p class="index"><a href="#what">What you shoud already know</a></p>
-        <p class="index"><a href="#Javascript">Javascript and Java</a></p>
-        <p class="index"><a href="#Hello">Hellow world</a></p>
-        <p class="index"><a href="#Variables">Variables</a></p>
-        <p class="index"><a href="#D-variables">Delclaring Variables</a></p>
-        <p class="index"><a href="#V-Scope">Variables Scope</a></p>
-        <p class="index"><a href="#g-variables">Globle Variables</a></p>
-        <p class="index"><a href="#Constant">Constasnt</a></p>
-        <p class="index"><a href="#datatype">Data types</a></p>
-        <p class="index"><a href="#if-else">if...else statement</a></p>
-        <p class="index"><a href="#F-declaration">Function Declaration</a></p>
-        <p class="index"><a href="#w-statement">While statement</a></p>
-        <p class="index"><a href="#Reference">Reference</a></p>
+        <nav id="navbar">
+        <header><h1>JS Documentation</h1></header>
+        <p class="index"><a href="#Introduction" class="nav-link">Indroduction</a></p>
+        <p class="index"><a href="#What_you_should_already_know" class="nav-link">What you shoud already know</a></p>
+        <p class="index"><a href="#Javascript_and_Java"  class="nav-link">Javascript and Java</a></p>
+        <p class="index"><a href="#Hello_world" class="nav-link">Hello world</a></p>
+        <p class="index"><a href="#Variables" class="nav-link">Variables</a></p>
+        <p class="index"><a href="#Declaring_variables" class="nav-link">Declaring variables</a></p>
+        <p class="index"><a href="#Variable_scope" class="nav-link">Variable scope</a></p>
+        <p class="index"><a href="#Global_variables" class="nav-link">Global variables</a></p>
+        <p class="index"><a href="#Constants" class="nav-link">Constants</a></p>
+        <!-- <p class="index"><a href="#datatype">Data types</a></p> -->
+        <p class="index"><a href="#if_else_statement" class="nav-link">if...else statement</a></p>
+        <p class="index"><a href="#while_statement" class="nav-link">while statement
+</a></p>
+<p class="index"><a href="#Function_declarations" class="nav-link">Function declarations</a></p>
+        <p class="index"><a href="#Reference" class="nav-link">Reference</a></p>
       </section>
       <section class="right">
         <section class="main-section" id="Introduction">
-          <h1>Indroduction</h1>
+          <header><h1>Indroduction</h1></header>
           <p>
             JavaScript is a cross-platform, object-oriented scripting language.
             It is a small and lightweight language. Inside a host environment
@@ -61,8 +62,8 @@
             </li>
           </ul>
         </section>
-        <section class="main-section" id="what">
-          <h1>What you should already know</h1>
+        <section class="main-section" id="What_you_should_already_know">
+         <header> <h1>What you should already know</h1></header>
           <p>This guide assumes you have the following basic background:</p>
           <ul class="bullets">
             <li>
@@ -76,8 +77,8 @@
             </li>
           </ul>
         </section>
-        <section class="main-section" id="JavaScript">
-          <h1>Javascript and Java</h1>
+        <section class="main-section" id="Javascript_and_Java">
+          <header><h1>Javascript and Java</h1></header>
           <p class="para">
             JavaScript and Java are similar in some ways but fundamentally
             different in some others. The JavaScript language resembles Java but
@@ -105,8 +106,8 @@
             parameters, and function return types are not explicitly typed.
           </p>
         </section>
-        <section class="main-section" id="Hello">
-          <h1>Hello world</h1>
+        <section class="main-section" id="Hello_world">
+          <header><h1>Hello world</h1></header>
           <p>
             To get started with writing JavaScript, open the Scratchpad and
             write your first "Hello world" JavaScript code:
@@ -124,7 +125,7 @@
           </p>
         </section>
         <section class="main-section" id="Variables">
-          <h1>Variables</h1>
+          <header><h1>Variables</h1></header>
           <p>
             You use variables as symbolic names for values in your application.
             The names of variables, called identifiers, conform to certain
@@ -144,8 +145,8 @@
             Number_hits, temp99, and _name.
           </p>
         </section>
-        <section class="main-section" id="D-scetion">
-          <h1>Declaring variables</h1>
+        <section class="main-section" id="Declaring_variables">
+          <header><h1>Declaring variables</h1></header>
           <p>You can declare a variable in three ways:</p>
           <p>With the keyword var. For example,</p>
           <p class="code"><code> var x = 42. </code></p>
@@ -159,8 +160,8 @@
             Variable scope below.
           </p>
         </section>
-        <section class="main-section" id="V-scope">
-          <h1>Variable scope</h1>
+        <section class="main-section" id="Variable_scope">
+          <header><h1>Variable scope</h1></header>
           <p>
             When you declare a variable outside of any function, it is called a
             global variable, because it is available to any other code in the
@@ -190,8 +191,8 @@
             >
           </p>
         </section>
-        <section class="main-section" id="G-variable">
-          <h1>Global variables</h1>
+        <section class="main-section" id="Global_variables">
+          <header><h1>Global variables</h1></header>
           <p>
             Global variables are in fact properties of the global object. In web
             pages the global object is window, so you can set and access global
@@ -205,8 +206,8 @@
             iframe as parent.phoneNumber.
           </p>
         </section>
-        <section class="main-section" id="Constant">
-          <h1>Constants</h1>
+        <section class="main-section" id="Constants">
+          <header><h1>Constants</h1></header>
           <p>
             You can create a read-only, named constant with the const keyword.
             The syntax of a constant identifier is the same as for a variable
@@ -244,8 +245,8 @@
             >
           </p>
         </section>
-        <section class="main-section" id="if-else">
-          <h1>if...else statement</h1>
+        <section class="main-section" id="if_else_statement">
+          <header><h1>if...else statement</h1></header>
           <p>
             Use the if statement to execute a statement if a logical condition
             is true. Use the optional else clause to execute a statement if the
@@ -306,8 +307,8 @@
             <code>if ((x = y)) { /* statements here */ }</code>
           </p>
         </section>
-        <section class="main-section" id="W-statement">
-          <h1>while statement</h1>
+        <section class="main-section" id="while_statement">
+          <header><h1>while statement</h1></header>
           <p>
             A while statement executes its statements as long as a specified
             condition evaluates to true. A while statement looks as follows:
@@ -349,8 +350,8 @@
             true, so the loop terminates.
           </p>
         </section>
-        <section class="main-section" id="F-declaration">
-          <h1>Function declarations</h1>
+        <section class="main-section" id="Function_declarations">
+          <header><h1>Function declarations</h1></header>
           <p>
             A function definition (also called a function declaration, or
             function statement) consists of the function keyword, followed by:
@@ -388,7 +389,7 @@
           </p>
         </section>
         <section class="main-section" id="Reference">
-          <h1>Reference</h1>
+          <header><h1>Reference</h1></header>
           <ul class="bullets">
             <li>
               All the documentation in this page is taken from
