--- a/Technical-documentation/index.html
+++ b/Technical-documentation/index.html
@@ -11,8 +11,8 @@
       <section class="left">
         <nav id="navbar">
         <header><h1>JS Documentation</h1></header>
-        <p class="index"><a href="#Introduction" class="nav-link">Indroduction</a></p>
-        <p class="index"><a href="#What_you_should_already_know" class="nav-link">What you shoud already know</a></p>
+        <p class="index"><a href="#Introduction" class="nav-link">Introduction</a></p>
+        <p class="index"><a href="#What_you_should_already_know" class="nav-link">What you should already know</a></p>
         <p class="index"><a href="#Javascript_and_Java"  class="nav-link">Javascript and Java</a></p>
         <p class="index"><a href="#Hello_world" class="nav-link">Hello world</a></p>
         <p class="index"><a href="#Variables" class="nav-link">Variables</a></p>
@@ -21,7 +21,7 @@
         <p class="index"><a href="#Global_variables" class="nav-link">Global variables</a></p>
         <p class="index"><a href="#Constants" class="nav-link">Constants</a></p>
         <!-- <p class="index"><a href="#datatype">Data types</a></p> -->
-        <p class="index"><a href="#if_else_statement" class="nav-link">if...else statement</a></p>
+        <p class="index"><a href="#if_else_statement" class="nav-link">if else statement</a></p>
         <p class="index"><a href="#while_statement" class="nav-link">while statement
 </a></p>
 <p class="index"><a href="#Function_declarations" class="nav-link">Function declarations</a></p>
@@ -29,7 +29,7 @@
       </section>
       <section class="right">
         <section class="main-section" id="Introduction">
-          <header><h1>Indroduction</h1></header>
+          <header>Introduction</header>
           <p>
             JavaScript is a cross-platform, object-oriented scripting language.
             It is a small and lightweight language. Inside a host environment
@@ -63,7 +63,7 @@
           </ul>
         </section>
         <section class="main-section" id="What_you_should_already_know">
-         <header> <h1>What you should already know</h1></header>
+         <header>What you should already know</header>
           <p>This guide assumes you have the following basic background:</p>
           <ul class="bullets">
             <li>
@@ -78,7 +78,7 @@
           </ul>
         </section>
         <section class="main-section" id="Javascript_and_Java">
-          <header><h1>Javascript and Java</h1></header>
+          <header>Javascript and Java</header>
           <p class="para">
             JavaScript and Java are similar in some ways but fundamentally
             different in some others. The JavaScript language resembles Java but
@@ -107,7 +107,7 @@
           </p>
         </section>
         <section class="main-section" id="Hello_world">
-          <header><h1>Hello world</h1></header>
+          <header>Hello world</header>
           <p>
             To get started with writing JavaScript, open the Scratchpad and
             write your first "Hello world" JavaScript code:
@@ -125,7 +125,7 @@
           </p>
         </section>
         <section class="main-section" id="Variables">
-          <header><h1>Variables</h1></header>
+          <header>Variables</header>
           <p>
             You use variables as symbolic names for values in your application.
             The names of variables, called identifiers, conform to certain
@@ -146,7 +146,7 @@
           </p>
         </section>
         <section class="main-section" id="Declaring_variables">
-          <header><h1>Declaring variables</h1></header>
+          <header>Declaring variables</header>
           <p>You can declare a variable in three ways:</p>
           <p>With the keyword var. For example,</p>
           <p class="code"><code> var x = 42. </code></p>
@@ -161,7 +161,7 @@
           </p>
         </section>
         <section class="main-section" id="Variable_scope">
-          <header><h1>Variable scope</h1></header>
+          <header>Variable scope</header>
           <p>
             When you declare a variable outside of any function, it is called a
             global variable, because it is available to any other code in the
@@ -192,7 +192,7 @@
           </p>
         </section>
         <section class="main-section" id="Global_variables">
-          <header><h1>Global variables</h1></header>
+          <header>Global variables</header>
           <p>
             Global variables are in fact properties of the global object. In web
             pages the global object is window, so you can set and access global
@@ -207,7 +207,7 @@
           </p>
         </section>
         <section class="main-section" id="Constants">
-          <header><h1>Constants</h1></header>
+          <header>Constants</header>
           <p>
             You can create a read-only, named constant with the const keyword.
             The syntax of a constant identifier is the same as for a variable
@@ -246,7 +246,7 @@
           </p>
         </section>
         <section class="main-section" id="if_else_statement">
-          <header><h1>if...else statement</h1></header>
+          <header>if else statement</header>
           <p>
             Use the if statement to execute a statement if a logical condition
             is true. Use the optional else clause to execute a statement if the
@@ -308,7 +308,7 @@
           </p>
         </section>
         <section class="main-section" id="while_statement">
-          <header><h1>while statement</h1></header>
+          <header>while statement</header>
           <p>
             A while statement executes its statements as long as a specified
             condition evaluates to true. A while statement looks as follows:
@@ -351,7 +351,7 @@
           </p>
         </section>
         <section class="main-section" id="Function_declarations">
-          <header><h1>Function declarations</h1></header>
+          <header>Function declarations</header>
           <p>
             A function definition (also called a function declaration, or
             function statement) consists of the function keyword, followed by:
@@ -389,7 +389,7 @@
           </p>
         </section>
         <section class="main-section" id="Reference">
-          <header><h1>Reference</h1></header>
+          <header>Reference</header>
           <ul class="bullets">
             <li>
               All the documentation in this page is taken from
