--- a/Langing_page(Challange)/index.html
+++ b/Langing_page(Challange)/index.html
@@ -1,21 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Product Landing page</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="logo-left">
-            <img id="header-img" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="original trombones logo">
-        </div>
-        <nav>
-            <div class="nav-link"><a href="">Features</a></div>
-            <div class="nav-link"><a href="">How it Works</a></div>
-            <div class="nav-link"><a href="">Pricing</a></div>
-        </nav>
+      <div class="logo-left">
+        <img
+          id="header-img"
+          src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
+          alt="original trombones logo"
+        />
+      </div>
+      <nav>
+        <div class="nav-link"><a href="">Features</a></div>
+        <div class="nav-link"><a href="">How it Works</a></div>
+        <div class="nav-link"><a href="">Pricing</a></div>
+      </nav>
     </header>
-</body>
+    <section class="form-sec">
+      <h1>Handcrafted, home-made masterpieces</h1>
+      <form action="">
+        <input
+          type="search"
+          name="search"
+          id="search"
+          placeholder="Enter your email address"
+        />
+        <button>GET STARTED</button>
+      </form>
+    </section>
+    <section class="features-sec">
+      <div class="features">
+        <h2>Premium Materials</h2>
+        <p>
+          Our trombones use the shiniest brass which is sourced locally. This
+          will increase the longevity of your purchase.
+        </p>
+        <h2>Fast Shipping</h2>
+        <p>
+            We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.
+        </p>
+        <h2>Quality Assurance</h2>
+        <p>
+            For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.
+        </p>
+      </div>
+    </section>
+  </body>
 </html>
