--- a/Langing_page(Challange)/index.html
+++ b/Langing_page(Challange)/index.html
@@ -48,6 +48,21 @@
         <p>
             For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.
         </p>
+        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" title="Roman Carnival Overture Op. 9 for Five Trombones" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen ></iframe>
+      </div>
+    </section>
+    <section class="containers">
+      <div class="box">
+        <h2>Tenor Trombone</h2>
+        <h3>$600
+        </h3>
+        <p>Lorem ipsum. <br>
+          Lorem ipsum. <br>
+          Lorem ipsum dolor. <br>
+          Lorem ipsum.</p>
+          <div class="button">
+            <button>Select</button>
+          </div>
       </div>
     </section>
   </body>
