--- a/Langing_page(Challange)/index.html
+++ b/Langing_page(Challange)/index.html
@@ -64,6 +64,38 @@
             <button>Select</button>
           </div>
       </div>
+      <div class="box">
+        <h2>Tenor Trombone</h2>
+        <h3>$600
+        </h3>
+        <p>Lorem ipsum. <br>
+          Lorem ipsum. <br>
+          Lorem ipsum dolor. <br>
+          Lorem ipsum.</p>
+          <div class="button">
+            <button>Select</button>
+          </div>
+      </div>
+      <div class="box">
+        <h2>Tenor Trombone</h2>
+        <h3>$600
+        </h3>
+        <p>Lorem ipsum. <br>
+          Lorem ipsum. <br>
+          Lorem ipsum dolor. <br>
+          Lorem ipsum.</p>
+          <div class="button">
+            <button>Select</button>
+          </div>
+      </div>
     </section>
+    <footer>
+      <ul>
+        <li><a href="">Privacy</a></li>
+        <li><a href="">Term</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+      <p class="para">Copyright 2016, Original Trombones</p>
+    </footer>
   </body>
 </html>
