--- a/Portfolio(challange)/index.html
+++ b/Portfolio(challange)/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>Portfolio Website</title>
 </head>
@@ -31,25 +32,55 @@
             </a>
             <a href="" target="_blank">
                 <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png" alt="project">
-                <p class="project-des"><span class="sign">&lt;</span>tribute page<span class="sign">/&gt;</span></p>
+                <p class="project-des"><span class="sign">&lt;</span>
+                    Random Quote Machine
+                    <span class="sign">/&gt;</span></p>
             </a>
             <a href="" target="_blank">
                 <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png" alt="project">
-                <p class="project-des"><span class="sign">&lt;</span>tribute page<span class="sign">/&gt;</span></p>
+                <p class="project-des"><span class="sign">&lt;</span>
+                    JavaScript Calculator
+                    <span class="sign">/&gt;</span></p>
             </a>
             <a href="" target="_blank">
                 <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/map.jpg" alt="project">
-                <p class="project-des"><span class="sign">&lt;</span>tribute page<span class="sign">/&gt;</span></p>
+                <p class="project-des"><span class="sign">&lt;</span>
+                    Map Data Across the Globe
+                    <span class="sign">/&gt;</span></p>
             </a>
             <a href="" target="_blank">
                 <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/wiki.png" alt="project">
-                <p class="project-des"><span class="sign">&lt;</span>tribute page<span class="sign">/&gt;</span></p>
+                <p class="project-des"><span class="sign">&lt;</span>
+                    Wikipedia Viewer
+                    <span class="sign">/&gt;</span></p>
             </a>
             <a href="" target="_blank">
                 <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tic-tac-toe.png" alt="project">
-                <p class="project-des"><span class="sign">&lt;</span>tribute page<span class="sign">/&gt;</span></p>
+                <p class="project-des"><span class="sign">&lt;</span>
+                    Tic Tac Toe Game
+                    <span class="sign">/&gt;</span></p>
             </a>
         </div>
+        <a class="showall" href="">Show all <span class="gt">&gt;</span></a>
     </section>
+    <footer>
+        <div class="upside">
+            <h2>Let's work together...</h2>
+            <p>How do you take your coffee?</p>
+            <div class="links">
+                <a href=""><i class="fab fa-facebook-square"></i> Facebook</a>
+                <a href=""><i class="fab fa-github"></i> Github</a>
+                <a href=""><i class="fab fa-twitter"></i> Twitter</a>
+                <a href=""><i class="fas fa-at"></i> Send a mail</a>
+                <a href=""><i class="fas fa-mobile-alt"></i> Call me</a>
+            </div>
+        </div>
+        <div class="downside">
+            <p class="dwn-des">**This is just a demo portfolio. All the projects and contact details given are not real.</p>
+            <p>
+                © Created for
+                <a href="">freeCodeCamp<i class="fab fa-free-code-camp"></i></a></p>
+        </div>
+    </footer>
 </body>
 </html>
