--- a/Portfolio(challange)/index.html
+++ b/Portfolio(challange)/index.html
@@ -11,18 +11,18 @@
     <section class="nav-sec">
         <nav id="navbar">
             <ul>
-                <li><a href="">About</a></li>
-                <li><a href="">Work</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="#" id="profile-link" target="_blank">About</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </section>
-    <section class="welcome-section">
+    <section class="welcome-section" id="welcome-section">
         <h1>Hey I am Rahul</h1>
         <h2>a web developer</h2>
     </section>
-    <section class="project-sec">
-        <h2>These are some of my projects</h2>
+    <section class="project-sec" id="projects">
+        <h2 class="project-tile">These are some of my projects</h2>
         <div class="grid-sec">
             <a href="" target="_blank">
                 <img class="project-image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg" alt="project">
